@@ -118,7 +118,7 @@
 <h4>Troubleshooting:</h4>
 <ul>
   <li>Your browser may tell you that your server certificate has expired. <a href="RemoteManagement.html#SSL">Create a new one</a>, and restart Tomcat.</li>
-  <li>Your browser will cache credentials (passwords), which may interfere with you ability to test these features. Turn password saving off, delete saved passwordss, and  restart your browser if needed.</li>
+  <li>Your browser will cache credentials (passwords), which may interfere with your ability to test these features. Turn password saving off, delete saved passwords, and  restart your browser if needed.</li>
 </ul>
 <h2>Unique Realm Name </h2>
  <p>If you are not using SSL, it is more secure to have a  Realm name unique to your server, then to use the default <em>THREDDS Data Server</em> Realm name, so we recommend that you change it in the web.xml file. This name is presented to the user during authentication, so it should be descriptive and include the hostname, for example:</p>
