@@ -72,8 +72,9 @@
 
 <h3>Authorization</h3>
 <ul>
+  <li><a href="PluggableRestrictedAccess.html">Adding your own Authenticator for Restricting Access
+  </a></li>
 </ul>
-
 <h3>TDS Services</h3>
 <ul>
   <li><a href="ServerInfo.html">Server Information</a> [default: enabled]</li>
