@@ -945,33 +945,6 @@
             </SvnBranchConfiguration>
           </value>
         </entry>
-        <entry key="$PROJECT_DIR$/../../../unidataCommon">
-          <value>
-            <SvnBranchConfiguration>
-              <option name="branchMap">
-                <map>
-                  <entry key="http://sub.unidata.ucar.edu/common/java/branch">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                  <entry key="http://sub.unidata.ucar.edu/common/java/tag">
-                    <value>
-                      <list />
-                    </value>
-                  </entry>
-                </map>
-              </option>
-              <option name="branchUrls">
-                <list>
-                  <option value="http://sub.unidata.ucar.edu/common/java/branch" />
-                  <option value="http://sub.unidata.ucar.edu/common/java/tag" />
-                </list>
-              </option>
-              <option name="trunkUrl" value="http://sub.unidata.ucar.edu/common/java/trunk" />
-            </SvnBranchConfiguration>
-          </value>
-        </entry>
       </map>
     </option>
     <option name="myVersion" value="124" />
